SG.tf
resource "aws_security_group" "triserver_sg" {
  name        = "triserver_sg"
  description = "allow incoming traffic on port 80"
  vpc_id      = aws_vpc.triserver_vpc.id

  dynamic "ingress" {
    for_each = var.ingress_ports
    content {
      from_port   = ingress.value
      to_port     = ingress.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
